[project]
name = "pymisp"
version = "2.5.17"
description = "Python API for MISP."
authors = [
    {name="Raphaël Vinot", email="raphael.vinot@circl.lu"}
]
license = "BSD-2-Clause"
readme = "README.md"
requires-python = ">=3.9.2,<4.0"

dynamic = [ "classifiers" ]

dependencies = [
    "requests (>=2.32.4)",
    "python-dateutil (>=2.9.0.post0)",
    "deprecated (>=1.2.18)"
]

[project.urls]
repository = "https://github.com/MISP/PyMISP"
issues = "https://github.com/MISP/PyMISP/issues"
documentation = "https://pymisp.readthedocs.io"

[project.optional-dependencies]

fileobjects = [
    "python-magic (>=0.4.27)",
    "pydeep2 (>=0.5.1)",
    "lief (>=0.16.6)"
]

openioc = [ "beautifulsoup4 (>=4.13.4)" ]

virustotal = [ "validators (>=0.35.0)" ]

docs = [
    "sphinx-autodoc-typehints (>=3.2.0) ; python_version >= \"3.11\"",
    "sphinx (>=8.2.3) ; python_version >= \"3.11\"",
    "docutils (<0.22) ; python_version >= \"3.11\"",
    "myst-parser (>=4.0.1) ; python_version >= \"3.11\""
]

pdfexport = [ "reportlab (>=4.4.3)" ]

url = [ "pyfaup (>=1.2)" ]

email = [
    "extract_msg (>=0.54.1)",
    "RTFDE (>=0.1.2.1) ; python_version <= \"3.9\"",
    "oletools (>=0.60.2)"
]

brotli = [ "urllib3 (>=2.5.0)" ]

[tool.poetry]
classifiers=[
    'Development Status :: 5 - Production/Stable',
    'Environment :: Console',
    'Operating System :: POSIX :: Linux',
    'Intended Audience :: Science/Research',
    'Intended Audience :: Telecommunications Industry',
    'Intended Audience :: Information Technology',
    'Topic :: Security',
    'Topic :: Internet'
]

exclude = ["pymisp/data"]
include = [
    {path = "CHANGELOG.txt", format = ["sdist"]},
    {path = "LICENSE", format = ["sdist"]},
    {path = "pymisp/data/*.json", format = ["sdist", "wheel"]},
    {path = "pymisp/data/misp-objects/*.json", format = ["sdist", "wheel"]},
    {path = "pymisp/data/misp-objects/objects/*/definition.json", format = ["sdist", "wheel"]},
    {path = "pymisp/data/misp-objects/relationships/definition.json", format = ["sdist", "wheel"]},
    {path = "docs", format = ["sdist"]},
    {path = "examples/*.py", format = ["sdist"]},
    {path = "tests", format = ["sdist"]}
]

[tool.poetry.group.dev.dependencies]
requests-mock = "^1.12.1"
mypy = "^1.17.1"
types-requests = "^2.32.4.20250611"
types-python-dateutil = "^2.9.0.20250708"
types-redis = "^4.6.0.20241004"
types-Flask = "^1.1.6"
pytest-cov = "^6.2.1"

[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"
